--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,16 @@
 ---
-
+import BaseLayout from '../layouts/BaseLayout.astro'
+import LastPost from '../components/Index/LastPost.astro'
+import PostsByYear from '../components/Index/PostsByYear.astro'
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<BaseLayout>
+  <section slot="header">
+    <h1>Index Header</h1>
+  </section>
+
+  <article>
+    <LastPost />
+    <PostsByYear />
+  </article>
+</BaseLayout>
