Creado estilos del blog

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -3,7 +3,7 @@ import HeaderLink from '../HeaderLink.astro'
 import { URLS_MAP } from '../../consts.ts'
 ---
 
-<footer class="max-w-screen-lg mx-auto p-6">
+<footer class="max-w-screen-md mx-auto p-6">
   <article class="w-28">
     {
       URLS_MAP.map(({ href, title }) => (
