--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -9,7 +9,7 @@ import HeaderNav from './HeaderNav.astro'
   >
     <div
       id="header-content"
-      class="max-w-screen-lg mx-auto flex justify-between py-4 px-6 transition-all"
+      class="max-w-screen-md mx-auto flex justify-between py-4 px-6 transition-all"
     >
       <a href="/" class="active:scale-90 transition-transform">
         <img
