--- a/src/components/Index/LastPost.astro
+++ b/src/components/Index/LastPost.astro
@@ -12,7 +12,7 @@ const blog = (
 const lastPost = blog[0]
 ---
 
-<section class="mb-14 mt-12 max-w-screen-md mx-auto">
+<section class="mb-14 mt-12 mx-auto">
   <p class="sm:text-center sm:mb-2">
     <FormattedDate date={lastPost.data.pubDate} />
   </p>
