--- a/src/components/Header/HeaderNav.astro
+++ b/src/components/Header/HeaderNav.astro
@@ -7,7 +7,7 @@ import { URLS_MAP } from '../../consts'
   id="scroll-elem"
   class="top-element scroll-visibility fixed top-[77px] left-0 w-full bg-background/60 backdrop-blur-md border-b border-borderColor-gray py-2 transition-all z-10"
 >
-  <nav class="flex gap-4 justify-center font-semibold max-w-screen-lg mx-auto">
+  <nav class="flex gap-4 justify-center font-semibold max-w-scree-md mx-auto">
     {
       URLS_MAP.map(({ href, title }, index) => (
         <>
