--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -26,7 +26,7 @@ const { title } = Astro.props
   <body class="dark:bg-background dark:text-textColor-secondary">
     <Header />
     <slot name="header" />
-    <main class="px-6 mx-auto max-w-screen-lg" transition:animate="none">
+    <main class="px-6 mx-auto max-w-screen-md" transition:animate="none">
       <slot />
     </main>
     <Footer />
