Creado estilos de About

--- a/src/components/Blog/BlogPost.astro
+++ b/src/components/Blog/BlogPost.astro
@@ -49,11 +49,11 @@ const { slug, date, title, description, tags } = Astro.props
           href={`/blog/${slug}`}
           class="group-hover:underline group-hover:underline-offset-4"
         >
-          <em>Continuar leyendo</em>
+          <strong> Continuar leyendo</strong>
         </a>
         <i>
           <RightArrowIcon
-            class="inline group-hover:translate-x-2 transition-transform"
+            class="ml-1 inline group-hover:translate-x-2 transition-transform"
           />
         </i>
       </span>
