--- a/src/components/GlobalStyles.astro
+++ b/src/components/GlobalStyles.astro
@@ -3,6 +3,10 @@
   @tailwind components;
   @tailwind utilities; */
 
+  .book-line {
+    @apply first-line:uppercase first-line:tracking-widest first-letter:text-7xl first-letter:font-bold first-letter:text-textColor-primary first-letter:mr-3 first-letter:float-left;
+  }
+
   .x-underline {
     background: linear-gradient(theme(colors.textColor.primary) 0 0) bottom
       no-repeat;
