--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,16 +1,17 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro'
 import BlogPost from '../../components/Blog/BlogPost.astro'
-import { getCollection } from 'astro:content'
 import RssIcon from '../../icons/RssIcon.astro'
+import { getCollection } from 'astro:content'
+import { SITE } from '../../consts'
 
 const blog = (await getCollection('blog')).sort(
   (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 )
 ---
 
-<BaseLayout title="Blog">
-  <section class="text-textColor-primary pt-12 pb-14 md:pt-16 md:pb-20">
+<BaseLayout title={`${SITE.TITLE} · Blog`}>
+  <section class="pt-12 pb-14 md:pt-16 md:pb-20">
     <div class="relative">
       <div
         class="absolute w-24 h-20 gradient blur-background-effect opacity-25 top-0 left-4 blur-3xl pointer-events-none"
