--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -1,11 +1,13 @@
 ---
-import HeaderNav from './HeaderNav.astro'
+import HeaderNav from './HeaderNav.tsx'
+import HeaderLink from '../HeaderLink.astro'
+import { URLS_MAP } from '../../consts'
 ---
 
 <div class="mb-[118px]">
   <article
     id="header-container"
-    class="fixed top-0 left-0 w-full bg-background/60 backdrop-blur-md border-b border-borderColor-gray z-20 transition-all"
+    class="fixed top-0 left-0 w-full bg-background/50 backdrop-blur-md border-b border-borderColor-gray z-20 transition-all"
   >
     <div
       id="header-content"
@@ -26,5 +28,16 @@ import HeaderNav from './HeaderNav.astro'
         </menu> -->
     </div>
   </article>
-  <HeaderNav />
+  <HeaderNav client:only>
+    {
+      URLS_MAP.map(({ href, title }, index) => (
+        <>
+          <span class="hover:text-textColor-primary">
+            <HeaderLink href={href} title={title} />
+          </span>
+          {URLS_MAP.length !== index + 1 && <span class="select-none">|</span>}
+        </>
+      ))
+    }
+  </HeaderNav>
 </div>
