--- a/src/components/GlobalStyles.astro
+++ b/src/components/GlobalStyles.astro
@@ -3,7 +3,15 @@
   @tailwind components;
   @tailwind utilities; */
 
+  .blog-post {
+    @apply prose prose-lorem dark:prose-invert prose-img:rounded-lg prose-code:before:content-[''] prose-code:after:content-[''] prose-code:bg-preColor prose-code:p-1 prose-code:rounded-md prose-h1:text-4xl prose-h1:text-center prose-h2:border-b prose-h2:pb-1 prose-h2:border-borderColor-gray prose-h2:text-3xl prose-h3:italic max-w-none;
+  }
+
   .book-line {
+    @apply first-line:uppercase first-line:tracking-widest first-letter:text-7xl first-letter:font-bold first-letter:text-textColor-primary first-letter:mr-3 first-letter:float-left;
+  }
+
+  .apply-book-line > p {
     @apply first-line:uppercase first-line:tracking-widest first-letter:text-7xl first-letter:font-bold first-letter:text-textColor-primary first-letter:mr-3 first-letter:float-left;
   }
 
@@ -25,6 +33,10 @@
     animation:
       backgroundGradientAnim 5s ease-in-out infinite,
       blurBackgroundAnim 5s ease-in-out infinite;
+  }
+
+  cite {
+    @apply not-italic before:content-["—"];
   }
 
   @media screen and (max-width: theme(screens.sm)) {
