--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,13 +7,14 @@ import { SITE } from '../consts.ts'
 
 type Props = {
   title?: string
+  class?: string
 }
 
-const { title } = Astro.props
+const { title, class: className } = Astro.props
 ---
 
 <!doctype html>
-<html lang="es" class="dark font-serif">
+<html lang="es" class:list={['dark font-serif', className]}>
   <head class="min-h-screen">
     <HeadCommon
       title={title ? title : SITE.TITLE}
@@ -23,7 +24,7 @@ const { title } = Astro.props
     <BaseStyles />
   </head>
 
-  <body class="dark:bg-background dark:text-textColor-secondary">
+  <body class="dark:bg-background dark:text-textColor-secondary break-words">
     <Header />
     <slot name="header" />
     <main
@@ -42,7 +43,7 @@ const { title } = Astro.props
         content: '';
         width: 100dvw;
         height: 100dvh;
-        z-index: 1;
+        z-index: -1;
         opacity: 5%;
         pointer-events: none;
         filter: contrast(2) saturate(2);
